--- a/.gitignore
+++ b/.gitignore
@@ -1,1 +1,4 @@
-# This file currently only serves to mark the location of a catkin workspace for tool integration
+build/*
+devel/*
+.vscode/*
+.catkin_workspace
